add swager doc for event
